<resources>
    <string name="app_name">Collect It</string>
    <string name="title_accueil">Accueil</string>
    <string name="title_historique">Historique</string>
    <string name="title_lots">Lots</string>
    <string name="title_methodes_eco">Méthodes éco</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="entete_connexion">Connexion</string>
    <string name="email">Email :</string>
    <string name="mdp">Mot de passe :</string>
    <string name="nouvel_utilisateur">Nouvel utilisateur ?</string>
    <string name="inscription">Inscription</string>
    <string name="mdp_oublie">Mot de passe oublié ?</string>
    <string name="reinitialisation">Réinitialiser mon mot de passe</string>
    <string name="ajoute_lot">Ajouter un lot</string>
    <string name="cout">Coût</string>
    <string name="cout_tv">Coût :</string>
    <string name="label">Label :</string>
    <string name="label_et">Label</string>
    <string name="liste_lots">Liste des lots</string>
    <string name="Ajoute_lot">Ajouter un lot</string>
    <string name="points">Mes points</string>
    <string name="date_validite">Date de validité :</string>
    <string name="obtenir_lot">Obtenir ce lot</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="confMdp">Confirmation du mot de passe :</string>
    <string name="valider">Valider</string>
    <string name="Admin">Admin</string>
    <string name="mdpAdmin">Mot de passe administrateur :</string>
    <string name="profil">Profil</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="consulter_profil">Consulter le profil</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="title_utilisateurs">Utilisateurs</string>
    <string name="modifier_lot">Modifier le lot</string>
    <string name="points_">Points :</string>
</resources>
