<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_accueil">

    <fragment
        android:id="@+id/navigation_accueil"
        android:name="fr.utt.if26.collectit.ui.accueil.AccueilFragment"
        android:label="@string/title_accueil"
        tools:layout="@layout/fragment_accueil" />

    <fragment
        android:id="@+id/navigation_historique"
        android:name="fr.utt.if26.collectit.ui.historique.HistoriqueFragment"
        android:label="@string/title_historique"
        tools:layout="@layout/fragment_historique" />

    <fragment
        android:id="@+id/navigation_lots"
        android:name="fr.utt.if26.collectit.ui.lots.LotsFragment"
        android:label="@string/title_lots"
        tools:layout="@layout/fragment_lots" />

    <fragment
        android:id="@+id/navigation_methodes_eco"
        android:name="fr.utt.if26.collectit.ui.methodeseco.MethodesEcoFragment"
        android:label="@string/title_methodes_eco"
        tools:layout="@layout/fragment_accueil" />
</navigation>